# Example-QT-project-Demo

./: CMakeLists.txt
src/: datagenerator.cpp  datagenerator.h  main.cpp  mainwindow.cpp  mainwindow.h
